// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<span>
  $12.30
</span>
`;

exports[`matches snapshot using non default currency 1`] = `
<span>
  RUB 776.78
</span>
`;

exports[`matches snapshot when highlighted 1`] = `
<strong>
  $12.30
</strong>
`;

exports[`matches snapshot with PL when loss 1`] = `
<span
  className="negative"
>
  -$10.00
</span>
`;

exports[`matches snapshot with PL when neutral 1`] = `
<span
  className="neutral"
>
  $0.00
</span>
`;

exports[`matches snapshot with PL when profit 1`] = `
<span
  className="positive"
>
  $10.00
</span>
`;
